== 0.0.4 (NOT TAGGED NOT RELEASED)
  * Added Hipe::Test::Helper for managing the writing of files during tests
  * Test/BaconExtensions: 
  * Lingual: more helpful error messages when constructing noun phrases
  * bugfix: change core exception class to actually be a factory
  * add merge! to openstruct common extension
== 0.0.3 / 2009-12-20
  * 93.47% covered
  * Complete test coverage for language production module
  * tiny hipe-core command line app to test wordwrap!
  * Lots of little utilities and extension modules, some fully tested, some half-baked
  * Yet another restructuring of where we keep files
  * Added Erroneous, GoldenHammer
== 0.0.2 / 2009-12-14
  * bugfix in lingual
== 0.0.1 / 2009-12-12
  * StructDiff - added :sort option to allow consistent comparison of diffs for testing.
  * Lingual - indefinite and definite articles with rule tables
  * StructDiff - tests are now with the output of summarize() instead of structures
  * StructDiff - tried and failed to make tests for struct diff -- ironic feedback loop here
  * StructDiff - a rudimentary comparison of Arrays
  * Rakefile tasks for bringing back in spec
  * ExceptionLike mixin for factory pattern exceptions.
== 0.0.0 / 2009-11-19
  * broken off from "blog migrator" cli 
  
=== FOR THE DISTANT FUTURE:
  * Predicates in predicate modules should use define_method and not method_missing, mebbe